--- a/web/css/setup.css
+++ b/web/css/setup.css
@@ -1,3 +1,16 @@
+.spin {
+  animation-name: spin;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .setup-splash-bg {
   background-image: url('../img/spaceman.jpg');
   background-size: cover;
